Add reset colors button

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <body>
     <h1 id="main_heading">Etcha-Sketch</h1>
     <div class="container"></div>
+    <div class="controls_container">
+      <button id="reset_btn">Reset</button>
+    </div>
     <script src="./Scripts/main.js"></script>
   </body>
 </html>
