Add color picker - Add drag and click paint events

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <h1 id="main_heading">Etcha-Sketch</h1>
     <div class="container"></div>
     <div class="controls_container">
+      <label for="color_picker">Choose the color</label>
+      <input type="color" name="color_picker" id="color_picker" />
       <button id="reset_btn">Reset</button>
     </div>
     <script src="./Scripts/main.js"></script>
