--- a/index.html
+++ b/index.html
@@ -14,11 +14,34 @@
   </head>
   <body>
     <h1 id="main_heading">Etcha-Sketch</h1>
-    <div class="container"></div>
+    <div class="canvas_container"></div>
     <div class="controls_container">
       <label for="color_picker">Choose the color</label>
       <input type="color" name="color_picker" id="color_picker" />
       <button id="reset_btn">Reset</button>
+      <div class="grid_range_container">
+        <label for="grid_size_selector">select grid size:</label>
+        <input
+          type="range"
+          name="grid_size_selector"
+          id="grid_size_selector"
+          min="1"
+          max="64"
+          value="16"
+          list="grid_range_list"
+        />
+        <datalist id="grid_range_list">
+          <option value="1" label="1"></option>
+          <option value="16" label="16"></option>
+          <option value="32" label="32"></option>
+          <option value="48" label="48"></option>
+          <option value="64" label="64"></option>
+        </datalist>
+        <p>
+          grid size: <span class="grid_size">not set</span> X
+          <span class="grid_size">not set</span>
+        </p>
+      </div>
     </div>
     <script src="./Scripts/main.js"></script>
   </body>
