Add random colors on button press
Button can be toggled ON and OFF
Add contorls_btn and active classes to css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="controls_container">
       <label for="color_picker">Choose the color</label>
       <input type="color" name="color_picker" id="color_picker" />
-      <button id="reset_btn">Reset</button>
+      <button id="reset_btn" class="controls_btn">Reset</button>
       <div class="grid_range_container">
         <label for="grid_size_selector">select grid size:</label>
         <input
@@ -42,6 +42,7 @@
           <span class="grid_size">not set</span>
         </p>
       </div>
+      <button id="random_color_btn" class="controls_btn">random colors</button>
     </div>
     <script src="./Scripts/main.js"></script>
   </body>
