Add shader fuctionality
- Darken color on button press

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </p>
       </div>
       <button id="random_color_btn" class="controls_btn">random colors</button>
+      <button id="shade_color_btn" class="controls_btn">shade colors</button>
     </div>
     <script src="./Scripts/main.js"></script>
   </body>
