--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
       </div>
       <button id="random_color_btn" class="controls_btn">random colors</button>
       <button id="shade_color_btn" class="controls_btn">shade colors</button>
+      <button id="lighten_color_btn" class="controls_btn">
+        lighten colors
+      </button>
     </div>
     <script src="./Scripts/main.js"></script>
   </body>
