Add erese button and erese pixel functionality
- Corrected main heading (adde - )
- reduced canvas container to 640px so everything fits nicely

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     />
   </head>
   <body>
-    <h1 id="main_heading">Etcha-Sketch</h1>
+    <h1 id="main_heading">Etch-a-Sketch</h1>
     <div class="canvas_container"></div>
     <div class="controls_container">
       <label for="color_picker">Choose the color</label>
       <input type="color" name="color_picker" id="color_picker" />
       <button id="reset_btn" class="controls_btn">Reset</button>
+      <button id="erese_btn" class="controls_btn">Erese</button>
       <div class="grid_range_container">
         <label for="grid_size_selector">select grid size:</label>
         <input
